--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,8 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Username</th>
-      <th>Password digest</th>
-      <th colspan="3"></th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
@@ -17,7 +16,6 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.username %></td>
-        <td><%= user.password_digest %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
