--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,28 @@
-<p id="notice"><%= notice %></p>
+<h3>
+  <strong>Name:</strong> <%= @user.name %> <strong>Username:</strong> <%= @user.username %>
+</h3>
 
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
-
-<p>
-  <strong>Username:</strong>
-  <%= @user.username %>
-</p>
-
-<p>
-  <strong>Password digest:</strong>
-  <%= @user.password_digest %>
-</p>
+<p><strong><%= @user.name %>'s Messages:</strong></p>
+<table>
+  <thead>
+    <tr>
+      <th>Message ID: </th>
+      <th>Body: </th>
+      <th>User ID: </th>
+      <th colspan="3">Chatroom ID:</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @user.messages.each do |message| %>
+      <tr>
+        <td><%= message.id %></td>
+        <td><%= message.body %></td>
+        <td><%= message.user_id %></td>
+        <td><%= message.chatroom_id %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
