--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -10,5 +10,10 @@
   <%= @message.user %>
 </p>
 
+<p>
+  <strong>Chatroom:</strong>
+  <%= @message.chatroom %>
+</p>
+
 <%= link_to 'Edit', edit_message_path(@message) %> |
 <%= link_to 'Back', messages_path %>
