--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :user_id %><br>
     <%= f.text_field :user_id %>
   </div>
+  <div class="field">
+    <%= f.label :chatroom_id %><br>
+    <%= f.text_field :chatroom_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
