--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Body</th>
       <th>User</th>
+      <th>Chatroom</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= message.body %></td>
         <td><%= message.user %></td>
+        <td><%= message.chatroom %></td>
         <td><%= link_to 'Show', message %></td>
         <td><%= link_to 'Edit', edit_message_path(message) %></td>
         <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
