--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -7,8 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Topic</th>
-      <th>Message</th>
-      <th colspan="3"></th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
@@ -17,7 +16,6 @@
       <tr>
         <td><%= chatroom.name %></td>
         <td><%= chatroom.topic %></td>
-        <td><%= chatroom.message %></td>
         <td><%= link_to 'Show', chatroom %></td>
         <td><%= link_to 'Edit', edit_chatroom_path(chatroom) %></td>
         <td><%= link_to 'Destroy', chatroom, method: :delete, data: { confirm: 'Are you sure?' } %></td>
