Polish app before adding ajax

--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <h1>Listing Chatrooms</h1>
 
@@ -7,7 +6,7 @@
     <tr>
       <th>Name</th>
       <th>Topic</th>
-      <th colspan="3">Actions</th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -16,9 +15,7 @@
       <tr>
         <td><%= chatroom.name %></td>
         <td><%= chatroom.topic %></td>
-        <td><%= link_to 'Show', chatroom %></td>
-        <td><%= link_to 'Edit', edit_chatroom_path(chatroom) %></td>
-        <td><%= link_to 'Destroy', chatroom, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Go on naw! Chat it up!', chatroom, class: "right btn" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Chatroom', new_chatroom_path %>
+<%= link_to 'New Chatroom', new_chatroom_path, class: "btn" %>
