--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,17 +6,29 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
-  <body>
+  <body class="#e3f2fd blue lighten-5">
+    <main>
+    <% if user_logged_in? %>
+    <%= react_component("navbarLoggedIn") %>
+    <% else %>
+    <%= react_component("navbarLoggedOut") %>
+    <% end %>
 
-  <%= react_component("HelloWorld") %>
+    <p id="notice"><%= notice %></p>
+    <p id="alert"><%= alert %></p>
 
-  <div class='container'>
-    <div class='row'>
-      <div class='m12'>
-        <%= yield %>
+
+    <div class='container'>
+      <div class='row'>
+        <div class='m12'>
+          <%= yield %>
+        </div>
       </div>
     </div>
-  </div>
-
+    <footer>
+      <%= params.inspect if Rails.env.development? %>
+      <%= @current_user.inspect if Rails.env.development? %>
+    </footer>
+    </main>
   </body>
 </html>
