--- a/app/views/chatrooms/edit.html.erb
+++ b/app/views/chatrooms/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Chatroom</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @chatroom %> |
-<%= link_to 'Back', chatrooms_path %>
+<br />
+<%= link_to 'Show', @chatroom, class: "btn" %>
+<%= link_to 'Back', chatrooms_path, class: "btn" %>
