--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing User</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<br/>
+<%= link_to 'Show', @user, class: "btn" %>
+<%= link_to 'Back', users_path, class: "btn" %>
