--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New User</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
+<p></p>
+<%= link_to 'Back', users_path, class: "btn" %>
