--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,28 +1,12 @@
 <h3>
-  <strong>Name:</strong> <%= @user.name %> <strong>Username:</strong> <%= @user.username %>
+  <strong>Name:</strong> <%= @user.name %>
 </h3>
 
-<p><strong><%= @user.name %>'s Messages:</strong></p>
-<table>
-  <thead>
-    <tr>
-      <th>Message ID: </th>
-      <th>Body: </th>
-      <th>User ID: </th>
-      <th colspan="3">Chatroom ID:</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @user.messages.each do |message| %>
-      <tr>
-        <td><%= message.id %></td>
-        <td><%= message.body %></td>
-        <td><%= message.user_id %></td>
-        <td><%= message.chatroom_id %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<h4>
+   <strong>Username:</strong> <%= @user.username %>
+</h4>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+
+
+<%= link_to 'Edit', edit_user_path(@user), class: "btn"  if @user == @current_user %>
+<%= link_to 'Back', users_path, class: "btn" %>
