Start Ajax and make chat scrollable div

--- a/app/views/chatrooms/_new_message_form.html.erb
+++ b/app/views/chatrooms/_new_message_form.html.erb
@@ -10,7 +10,8 @@
   <div class="field">
     <%= f.hidden_field :chatroom_id, value: @chatroom.id %>
   </div>
+  <div class="btn" id="newComment">send message</div>
   <div class="actions">
-    <%= f.submit class: "btn" %>
+    <p><%= f.submit class: "btn" %></p>
   </div>
 <% end %>
