--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= user.username %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) if user == @current_user %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } if user == @current_user %></td>
+        <td><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' } if user == @current_user %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,5 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path, class: "btn" %>
+<p><%= link_to 'New User', new_user_path, class: "btn" unless user_logged_in? %>
+<%= link_to 'Login', login_path, class: "btn" unless user_logged_in? %></p>
